--- a/glm-0.3.1/m4/Makefile
+++ b/glm-0.3.1/m4/Makefile
@@ -64,13 +64,13 @@ AUTOCONF = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/miss
 AUTOHEADER = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run autoheader
 AUTOMAKE = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run automake-1.9
 AWK = gawk
-CC = gcc
+CC = gcc -arch i386
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPP = gcc -E
+CPP = gcc -arch i386 -E
 CPPFLAGS = 
-CXX = g++
-CXXCPP = g++ -E
+CXX = g++ -arch i386
+CXXCPP = g++ -arch i386 -E
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -g -O2
 CYGPATH_W = echo
@@ -107,7 +107,7 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
-JPEGLIBS = 
+JPEGLIBS = -ljpeg
 LDFLAGS = 
 LIBOBJS = 
 LIBS = 
@@ -123,7 +123,7 @@ PACKAGE_STRING = glm 0.3.1
 PACKAGE_TARNAME = glm
 PACKAGE_VERSION = 0.3.1
 PATH_SEPARATOR = :
-PTHREAD_CC = gcc
+PTHREAD_CC = gcc -arch i386
 PTHREAD_CFLAGS = 
 PTHREAD_LIBS = 
 RANLIB = ranlib
@@ -132,7 +132,7 @@ SED = /usr/bin/sed
 SET_MAKE = 
 SHELL = /bin/sh
 STRIP = strip
-SUPPORT_LIBS = 
+SUPPORT_LIBS =  -ljpeg -lpng -lz
 VERSION = 0.3.1
 WARN_CFLAGS = -Wall -Wmissing-prototypes 
 X_CFLAGS = 
@@ -140,8 +140,8 @@ X_EXTRA_LIBS =
 X_LIBS = 
 X_PRE_LIBS = 
 ac_ct_AR = ar
-ac_ct_CC = gcc
-ac_ct_CXX = g++
+ac_ct_CC = gcc -arch i386
+ac_ct_CXX = 
 ac_ct_F77 = 
 ac_ct_RANLIB = ranlib
 ac_ct_STRIP = strip
