Fixed a bug where we started trying to render before calling GL init. Later this fix should be cleaned up.

--- a/glm-0.3.1/m4/Makefile
+++ b/glm-0.3.1/m4/Makefile
@@ -33,9 +33,9 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i686-apple-darwin10.4.0
-host_triplet = i686-apple-darwin10.4.0
-target_triplet = i686-apple-darwin10.4.0
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
+target_triplet = x86_64-unknown-linux-gnu
 subdir = m4
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -55,31 +55,31 @@ CONFIG_CLEAN_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/abakst/Zoepis/glm-0.3.1/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run tar
+AMTAR = ${SHELL} /home/abakst/Zoepis/glm-0.3.1/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/abakst/Zoepis/glm-0.3.1/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/abakst/Zoepis/glm-0.3.1/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/abakst/Zoepis/glm-0.3.1/missing --run automake-1.9
 AWK = gawk
-CC = gcc -arch i386
+CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPP = gcc -arch i386 -E
+CPP = gcc -E
 CPPFLAGS = 
-CXX = g++ -arch i386
-CXXCPP = g++ -arch i386 -E
-CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O2
+CXX = g++
+CXXCPP = 
+CXXDEPMODE = depmode=none
+CXXFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 DEVILLIBS = 
-ECHO = /bin/echo
-ECHO_C = \c
-ECHO_N = 
+ECHO = echo
+ECHO_C = 
+ECHO_N = -n
 ECHO_T = 
 EGREP = grep -E
 EXEEXT = 
@@ -88,17 +88,17 @@ FFLAGS =
 GLUI_CFLAGS = 
 GLUI_LIBS = 
 GLUT_CFLAGS = 
-GLUT_LIBS = 
+GLUT_LIBS = -lglut  -lSM -lICE -lXmu -lXi  
 GLU_CFLAGS = 
 GLU_LIBS = 
-GL_CFLAGS = 
-GL_LIBS = 
+GL_CFLAGS = -pthread
+GL_LIBS = -lGL  -lm
 HAVE_GIF_FALSE = 
 HAVE_GIF_TRUE = #
 HAVE_GLUI_FALSE = 
 HAVE_GLUI_TRUE = #
-HAVE_GLUT_FALSE = 
-HAVE_GLUT_TRUE = #
+HAVE_GLUT_FALSE = #
+HAVE_GLUT_TRUE = 
 HAVE_SDL_IMAGE_FALSE = 
 HAVE_SDL_IMAGE_TRUE = #
 HAVE_TIFF_FALSE = 
@@ -114,7 +114,7 @@ LIBS =
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/abakst/Zoepis/glm-0.3.1/missing --run makeinfo
 OBJEXT = o
 PACKAGE = glm
 PACKAGE_BUGREPORT = 
@@ -123,14 +123,14 @@ PACKAGE_STRING = glm 0.3.1
 PACKAGE_TARNAME = glm
 PACKAGE_VERSION = 0.3.1
 PATH_SEPARATOR = :
-PTHREAD_CC = gcc -arch i386
-PTHREAD_CFLAGS = 
+PTHREAD_CC = gcc
+PTHREAD_CFLAGS = -pthread
 PTHREAD_LIBS = 
 RANLIB = ranlib
 SDL_IMAGELIBS = 
-SED = /usr/bin/sed
+SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 STRIP = strip
 SUPPORT_LIBS =  -ljpeg -lpng -lz
 VERSION = 0.3.1
@@ -138,43 +138,43 @@ WARN_CFLAGS = -Wall -Wmissing-prototypes
 X_CFLAGS = 
 X_EXTRA_LIBS = 
 X_LIBS = 
-X_PRE_LIBS = 
+X_PRE_LIBS =  -lSM -lICE
 ac_ct_AR = ar
-ac_ct_CC = gcc -arch i386
-ac_ct_CXX = 
+ac_ct_CC = gcc
+ac_ct_CXX = g++
 ac_ct_F77 = 
 ac_ct_RANLIB = ranlib
 ac_ct_STRIP = strip
 am__fastdepCC_FALSE = #
 am__fastdepCC_TRUE = 
-am__fastdepCXX_FALSE = #
-am__fastdepCXX_TRUE = 
+am__fastdepCXX_FALSE = 
+am__fastdepCXX_TRUE = #
 am__include = include
 am__leading_dot = .
 am__quote = 
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i686-apple-darwin10.4.0
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i686
-build_os = darwin10.4.0
-build_vendor = apple
+build_cpu = x86_64
+build_os = linux-gnu
+build_vendor = unknown
 datadir = ${prefix}/share
 exec_prefix = ${prefix}
-host = i686-apple-darwin10.4.0
+host = x86_64-unknown-linux-gnu
 host_alias = 
-host_cpu = i686
-host_os = darwin10.4.0
-host_vendor = apple
+host_cpu = x86_64
+host_os = linux-gnu
+host_vendor = unknown
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /Users/bakster/Projects/Haskell/Games2/Zoepis/glm-0.3.1/install-sh
+install_sh = /home/abakst/Zoepis/glm-0.3.1/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
-mkdir_p = $(install_sh) -d
+mkdir_p = mkdir -p --
 oldincludedir = /usr/include
 prefix = /usr/local
 program_transform_name = s,x,x,
@@ -182,11 +182,11 @@ sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sim_ac_simage_configcmd = 
 sysconfdir = ${prefix}/etc
-target = i686-apple-darwin10.4.0
+target = x86_64-unknown-linux-gnu
 target_alias = 
-target_cpu = i686
-target_os = darwin10.4.0
-target_vendor = apple
+target_cpu = x86_64
+target_os = linux-gnu
+target_vendor = unknown
 EXTRA_DIST = acx_pthread.m4 ax_check_gl.m4 ax_check_glu.m4 ax_check_glut.m4 ax_check_glui.m4 ax_lang_compiler_ms.m4 compiler-flags.m4 simage.m4
 all: all-am
 
